<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="207dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/text1Button"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@color/secondary"
                android:elevation="4dp"
                android:fontFamily="@font/scp_reg"
                android:text="@string/text1"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/text2Button"
                android:layout_width="wrap_content"

                android:layout_height="36dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@color/secondaryLight"
                android:elevation="4dp"
                android:fontFamily="@font/scp_reg"
                android:text="@string/text2"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/myTextButton"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="@color/secondary"

                android:elevation="4dp"
                android:fontFamily="@font/scp_reg"
                android:text="@string/my_text"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/inputText"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/white60background"
            android:textSize="14sp"
            android:textColor="@color/greyDark"
            android:textColorHint="@color/greyDark"
            android:padding="16dp"
            android:hint="@string/text2_hint"
            android:elevation="2dp"
            android:gravity="start|top"

            android:inputType="textMultiLine" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/generateButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/secondary"
            android:fontFamily="@font/scp_reg"
            android:text="@string/calculate"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tableTopBar"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:background="@color/primaryDark"
            android:elevation="4dp"
            android:fontFamily="@font/scp_reg"
            android:paddingTop="8dp"
            android:paddingStart="16dp"
            android:text="@string/table_of_occurences"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tableText"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/white60background"
            android:textSize="14sp"
            android:textColor="@color/greyDark"
            android:padding="16dp"
            android:elevation="2dp"/>

        <TextView
            android:id="@+id/textAfterTopBar"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:background="@color/primaryDark"
            android:elevation="4dp"
            android:fontFamily="@font/scp_reg"
            android:paddingTop="8dp"
            android:paddingStart="16dp"
            android:text="@string/text_after"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textAfterText"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/white60background"
            android:textSize="14sp"
            android:textColor="@color/greyDark"
            android:padding="16dp"
            android:elevation="2dp"/>

        <TextView
            android:id="@+id/statsTopBar"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:background="@color/primaryDark"
            android:elevation="4dp"
            android:fontFamily="@font/scp_reg"
            android:paddingTop="8dp"
            android:paddingStart="16dp"
            android:text="@string/stats"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/statsText"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/white60background"
            android:textSize="14sp"
            android:textColor="@color/greyDark"
            android:padding="16dp"
            android:elevation="2dp"/>

        <TextView
            android:id="@+id/huffTreeTopBar"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:background="@color/primaryDark"
            android:elevation="4dp"
            android:fontFamily="@font/scp_reg"
            android:paddingTop="8dp"
            android:paddingStart="16dp"
            android:text="@string/generated_tree"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/huffTreeText"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/white60background"
            android:textSize="14sp"
            android:textColor="@color/greyDark"
            android:padding="16dp"
            android:elevation="2dp"/>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>